<resources>
    <string name="app_name">Inventory</string>
    <string name="title_activity_add_product">Add Product</string>
    <string name="title_activity_edit_product">Edit Product</string>

    <string name="action_add_product">Add Product</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_product">Save</string>
    <string name="action_delete_product">Delete</string>
    <string name="action_edit_product">Edit</string>

    <string name="list_header_name">Name</string>
    <string name="list_header_price">Price</string>
    <string name="list_header_quantity">In Stock</string>
    <string name="button_sell">SELL</string>

    <string name="empty_view_title_text">There are no products in your inventory.</string>
    <string name="empty_view_subtitle_text">Hit the button at the bottom to get started.</string>
    <string name="content_desc_cart_image">Picture of a shopping cart.</string>

    <string name="edit_name_hint">Name of the product</string>
    <string name="edit_price_hint">Price of the product.</string>
    <string name="edit_quantity_hint">How many products.</string>
    <string name="edit_supplier_name_hint">Name of the supplier.</string>
    <string name="edit_supplier_phone_hint">Phone Number of the supplier.</string>

    <string name="caption_name">Product Name</string>
    <string name="caption_price">Price</string>
    <string name="caption_quantity">Quantity</string>
    <string name="caption_supplier_name">Supplier Name</string>
    <string name="caption_supplier_phone">Supplier Phone</string>

    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="button_increase">+</string>
    <string name="button_decrease">-</string>
    <string name="quantity_zero">0</string>
    <string name="button_call_supplier">Call Supplier</string>
    <string name="empty_string"> </string>
    <string name="toast_cant_save">Could not save. Please enter all fields.</string>
    <string name="toast_enter_valid_phone">Please enter a valid phone number.</string>
</resources>
