<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/edit_activity_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_supplier_phone_hint"
            android:inputType="textPersonName" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_price_hint"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_quantity_hint"
            android:inputType="number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption_supplier_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/edit_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_supplier_name_hint"
            android:inputType="textPersonName" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption_supplier_phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/edit_supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_supplier_phone_hint"
            android:inputType="phone" />

    </LinearLayout>

</ScrollView>